fix: modal이 보일 때, overflow-hidden을 주는 방식을 js style에서 css로 변경

--- a/src/app.css
+++ b/src/app.css
@@ -19,6 +19,10 @@ body {
   color: var(--white);
 }
 
+.body--overflow-hidden {
+  overflow: hidden;
+}
+
 a {
   color: inherit;
   text-decoration: none;
